output/parser.output
Grammar

    0 $accept: PROTASI $end

    1 PROTASI: LEKSEIS

    2 LEKSEIS: LEKSEIS MEROSLOGOU
    3        | /* empty */

    4 MEROSLOGOU: LLEKSI
    5           | LARTHRO
    6           | LARITHMOS
    7           | LSTIKSI

    8 LARTHRO: ARS_EN_AR
    9        | ARS_PL_AR
   10        | THY_EN_AR
   11        | THY_PL_AR
   12        | OUD_EN_AR
   13        | OUD_PL_AR
   14        | _EN_AR
   15        | _PL_AR

   16 LARITHMOS: ARITHMOS

   17 LSTIKSI: STIKSI

   18 LLEKSI: OUSIASTIKO
   19       | EPITHETO
   20       | RIMA
   21       | EPIRIMA
   22       | ANTONUMIA
   23       | ARTHRO
   24       | PROTHESI
   25       | SUDESMOS
   26       | EPIFONIMA


Terminals, with rules where they appear

$end (0) 0
error (256)
ARS_EN_AR (258) 8
ARS_PL_AR (259) 9
THY_EN_AR (260) 10
THY_PL_AR (261) 11
OUD_EN_AR (262) 12
OUD_PL_AR (263) 13
_PL_AR (264) 15
_EN_AR (265) 14
OUSIASTIKO (266) 18
EPITHETO (267) 19
RIMA (268) 20
EPIRIMA (269) 21
ANTONUMIA (270) 22
ARTHRO (271) 23
PROTHESI (272) 24
SUDESMOS (273) 25
EPIFONIMA (274) 26
STIKSI (275) 17
ARITHMOS (276) 16


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
PROTASI (23)
    on left: 1, on right: 0
LEKSEIS (24)
    on left: 2 3, on right: 1 2
MEROSLOGOU (25)
    on left: 4 5 6 7, on right: 2
LARTHRO (26)
    on left: 8 9 10 11 12 13 14 15, on right: 5
LARITHMOS (27)
    on left: 16, on right: 6
LSTIKSI (28)
    on left: 17, on right: 7
LLEKSI (29)
    on left: 18 19 20 21 22 23 24 25 26, on right: 4


state 0

    0 $accept: . PROTASI $end

    $default  reduce using rule 3 (LEKSEIS)

    PROTASI  go to state 1
    LEKSEIS  go to state 2


state 1

    0 $accept: PROTASI . $end

    $end  shift, and go to state 3


state 2

    1 PROTASI: LEKSEIS .
    2 LEKSEIS: LEKSEIS . MEROSLOGOU

    ARS_EN_AR   shift, and go to state 4
    ARS_PL_AR   shift, and go to state 5
    THY_EN_AR   shift, and go to state 6
    THY_PL_AR   shift, and go to state 7
    OUD_EN_AR   shift, and go to state 8
    OUD_PL_AR   shift, and go to state 9
    _PL_AR      shift, and go to state 10
    _EN_AR      shift, and go to state 11
    OUSIASTIKO  shift, and go to state 12
    EPITHETO    shift, and go to state 13
    RIMA        shift, and go to state 14
    EPIRIMA     shift, and go to state 15
    ANTONUMIA   shift, and go to state 16
    ARTHRO      shift, and go to state 17
    PROTHESI    shift, and go to state 18
    SUDESMOS    shift, and go to state 19
    EPIFONIMA   shift, and go to state 20
    STIKSI      shift, and go to state 21
    ARITHMOS    shift, and go to state 22

    $default  reduce using rule 1 (PROTASI)

    MEROSLOGOU  go to state 23
    LARTHRO     go to state 24
    LARITHMOS   go to state 25
    LSTIKSI     go to state 26
    LLEKSI      go to state 27


state 3

    0 $accept: PROTASI $end .

    $default  accept


state 4

    8 LARTHRO: ARS_EN_AR .

    $default  reduce using rule 8 (LARTHRO)


state 5

    9 LARTHRO: ARS_PL_AR .

    $default  reduce using rule 9 (LARTHRO)


state 6

   10 LARTHRO: THY_EN_AR .

    $default  reduce using rule 10 (LARTHRO)


state 7

   11 LARTHRO: THY_PL_AR .

    $default  reduce using rule 11 (LARTHRO)


state 8

   12 LARTHRO: OUD_EN_AR .

    $default  reduce using rule 12 (LARTHRO)


state 9

   13 LARTHRO: OUD_PL_AR .

    $default  reduce using rule 13 (LARTHRO)


state 10

   15 LARTHRO: _PL_AR .

    $default  reduce using rule 15 (LARTHRO)


state 11

   14 LARTHRO: _EN_AR .

    $default  reduce using rule 14 (LARTHRO)


state 12

   18 LLEKSI: OUSIASTIKO .

    $default  reduce using rule 18 (LLEKSI)


state 13

   19 LLEKSI: EPITHETO .

    $default  reduce using rule 19 (LLEKSI)


state 14

   20 LLEKSI: RIMA .

    $default  reduce using rule 20 (LLEKSI)


state 15

   21 LLEKSI: EPIRIMA .

    $default  reduce using rule 21 (LLEKSI)


state 16

   22 LLEKSI: ANTONUMIA .

    $default  reduce using rule 22 (LLEKSI)


state 17

   23 LLEKSI: ARTHRO .

    $default  reduce using rule 23 (LLEKSI)


state 18

   24 LLEKSI: PROTHESI .

    $default  reduce using rule 24 (LLEKSI)


state 19

   25 LLEKSI: SUDESMOS .

    $default  reduce using rule 25 (LLEKSI)


state 20

   26 LLEKSI: EPIFONIMA .

    $default  reduce using rule 26 (LLEKSI)


state 21

   17 LSTIKSI: STIKSI .

    $default  reduce using rule 17 (LSTIKSI)


state 22

   16 LARITHMOS: ARITHMOS .

    $default  reduce using rule 16 (LARITHMOS)


state 23

    2 LEKSEIS: LEKSEIS MEROSLOGOU .

    $default  reduce using rule 2 (LEKSEIS)


state 24

    5 MEROSLOGOU: LARTHRO .

    $default  reduce using rule 5 (MEROSLOGOU)


state 25

    6 MEROSLOGOU: LARITHMOS .

    $default  reduce using rule 6 (MEROSLOGOU)


state 26

    7 MEROSLOGOU: LSTIKSI .

    $default  reduce using rule 7 (MEROSLOGOU)


state 27

    4 MEROSLOGOU: LLEKSI .

    $default  reduce using rule 4 (MEROSLOGOU)
